--- a/src/app/homecomponents/jumbotron/jumbotron.component.css
+++ b/src/app/homecomponents/jumbotron/jumbotron.component.css
@@ -1,5 +1,5 @@
 .jumbotron-home {
-	background-image: url('http://localhost:4200/assets/img/road.png');
+	background-image: url('/assets/img/road.png');
 	background-repeat: no-repeat;
 	background-position: 0% 60%;
 	background-size: cover;
