--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,13 +1,14 @@
 <div class="container">
   <h2 class="text-center font-style">contact.</h2>
+  <flash-messages></flash-messages>
   <form ngNoForm action="http://localhost:8000/contact" method="post">
     <div class="form-group">
       <label for="name">Your Name:</label>
-      <input type="text" name="name" class="form-control">
+      <input type="text" name="name" class="form-control" required>
     </div>
     <div class="form-group">
       <label for="email">Your Email:</label>
-      <input type="text" name="email" class="form-control">
+      <input type="text" name="email" class="form-control" required>
     </div>
     <div class="form-group">
       <label for="phone">Your Phone Number:</label>
@@ -15,7 +16,7 @@
     </div>
     <div class="form-group">
       <label for="message">Your Message:</label>
-      <textarea class="form-control" rows="10" name="message">Enter message here...</textarea>
+      <textarea class="form-control" rows="10" name="message" required></textarea>
     </div>
     <div class="form-group" hidden>
       <label for="company">Robot check. You shouldn't be seeing this, human</label>
