--- a/src/app/kitchen-pi-components/add-recipe/add-recipe.component.html
+++ b/src/app/kitchen-pi-components/add-recipe/add-recipe.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h3>Add a Recipe</h3>
-	<form ngNoForm action="http://localhost:8000/api/recipes" method="post">
+	<form ngNoForm action="http://localhost/api/recipes" method="post">
 		<div class="form-group">
 			<label for="name">Recipe Name</label>
 			<input type="text" class="form-control" id="name" name="name" required [(ngModel)]="name">
